--- a/japanese.html
+++ b/japanese.html
@@ -17,6 +17,10 @@
     <nav class="navbar">
     </nav>
     <main>
+        <div class="alert alert-warning" id="jsalert" role="alert">
+            <p>A JavaScript nem megfelelően töltődött be. /
+            JavaScript is not loaded correctly.</p>
+        </div>
         <div class="text-center">
             <h1><ruby><span lang="hu">A japán tanulásomról</span><span lang="en">About my Japanese learning</span><rt>僕の日本語の勉強について</rt></ruby></h1>
             <div class="row">
