--- a/privacy.html
+++ b/privacy.html
@@ -17,6 +17,10 @@
     <nav class="navbar">
     </nav>
     <main>
+        <div class="alert alert-warning" id="jsalert" role="alert">
+            <p>A JavaScript nem megfelelően töltődött be. /
+            JavaScript is not loaded correctly.</p>
+        </div>
         <div id="tajekoztato" class="text-center mt-3" style="margin: auto; width: 70%;">
             <h1 id="mh1"><span lang="hu">Adatkezelési útmutató</span><span lang="en">Privacy Policy</span></h1>
             <hr style="color: red;">
