--- a/osszefoglalok/index.html
+++ b/osszefoglalok/index.html
@@ -19,6 +19,10 @@
     </nav>
     <main>
         <div class="text-center">
+            <div class="alert alert-warning" id="jsalert" role="alert">
+                <p>A JavaScript nem megfelelően töltődött be. /
+                JavaScript is not loaded correctly.</p>
+            </div>
             <h1 id="mh1">Összefoglalók</h1>
             <h3>Válassz tantárgyat!</h3>
 
