--- a/social.html
+++ b/social.html
@@ -19,6 +19,10 @@
     </nav>
     <main>
         <div class="text-center">
+            <div class="alert alert-warning" id="jsalert" role="alert">
+                <p>A JavaScript nem megfelelően töltődött be. /
+                JavaScript is not loaded correctly.</p>
+            </div>
             <h1 id="mh1" class="mb-5"><span lang="hu">Linkek és kapcsolat</span><span lang="en">Links and contact</span></h1>
             <div id="viz_des" class="mb-5">
                 <ul>
