--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 You can change the language in the upper right corner!</p>
         </div>
         <h1 id="mh1"><span lang="hu">Üdv az oldalon!</span><span lang="en">Welcome to the site!</span></h1>
-        <div class="row mt-5">
+        <div class="row mt-5" id="ket_div">
             <div class="col" id="rolam-div">
                 <h3><span lang="hu">Rólam:</span><span lang="en">About me:</span></h3>
                 <ul>
@@ -38,9 +38,10 @@
                     <li><span lang="hu" id="jpn_tan">Japán tanulás <span id="jido_hu"></span></span><span lang="en" id="jpn_tan">Learning Japanese <span id="jido_en"></span></span></li>
                 </ul>
             </div>
-                <div class="col" id="rc">
+            <hr>
+            <div class="col" id="rc">
                 <h3><span lang="hu">Projektjeim:</span><span lang="en">My projects:</span></h3>
-                <div id="nothing-div">
+                <div id="project-div">
                     <h5><span lang="hu">Féléves (iskolai) projektek</span><span lang="en">Half-year (school) projects</span></h5>
                     <ul>
                         <li>PROJECT RLG <button class="btn btn-secondary" onclick="window.open('https://pntrmln.itch.io/project-rlg')"><span lang="hu">Megtekintés</span><span lang="en">See more</span></button></li>
@@ -50,14 +51,6 @@
                         <li><i class="fa-solid fa-empty-set"></i><span lang="hu"> HAMAROSAN</span><span lang="en"> SOON</span></li>
                     </ul>
                 </div>
-            </div>
-        </div>
-        <div id="index_for_mobile">
-            <hr style="color: red;">
-            <h3><span lang="hu">Projektjeim:</span><span lang="en">My projects:</span></h3>
-            <div id="nothing-div">
-                <i class="fa-solid fa-empty-set fa-5x"></i>
-                <h3><span lang="hu">HAMAROSAN</span><span lang="en">SOON</span></h3>
             </div>
         </div>
     </main>
