Összefoglalók: A 19. szd. II. felének magyar irodalma

--- a/osszefoglalok/magyar.html
+++ b/osszefoglalok/magyar.html
@@ -39,6 +39,7 @@
                 <div class="dropdown">
                     <h4 id="jtnh4" onclick="showDropdown('jtn')">Jelenlegi tanév:<i class="fa-solid fa-caret-down"></i></h4>
                     <div class="dropdown-content" id="jtn_content">
+                        <h5 onclick="createFileExplorer(this)">A 19. század második felének magyar irodalma</h5>
                         <h5 onclick="createFileExplorer(this)">Magyar belső vizsga</h5>
                     </div>
                 </div>
